fix footer graphic getting cut off on smaller pages

--- a/src/app/page-layout/page-layout.component.scss
+++ b/src/app/page-layout/page-layout.component.scss
@@ -357,6 +357,10 @@ $flyout-gap: ($flyout-spacing / 2);
   }
 }
 
+#ft-root {
+  justify-self: flex-end;
+  margin-top: auto;
+}
 #ft-layout {
   $gap: 2rem;
 
