--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -48,6 +48,12 @@ body {
   }
 }
 
+app-page-layout {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .locale-en-US {
   .show-ja,
   .show-ko,
